--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^3.10.0",
     "react-jss": "^10.3.0",
-    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
