--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.10.0",
     "react-jss": "^10.3.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
