--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "react-icons": "^3.10.0",
     "react-jss": "^10.3.0",
     "react-moment": "^0.9.7",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
