--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "js-base64": "^3.2.4",
+    "js-cookie": "^2.2.1",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
