--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
     "js-base64": "^3.2.4",
+    "js-cookie": "^2.2.1",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
